--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,37 @@ jobs:
             cd backend
             npm install
             npm run test
-            
+  # scan-frontend:
+  #   docker:
+  #     - image: circleci/node:13.8.0
+  #   steps:
+  #     - checkout
+  #     - restore_cache:
+  #         keys: [frontend-build]
+  #     - run:
+  #         name: Analyse frontend
+  #         command: |
+  #           cd frontend
+  #           npm install
+  #           npm audit fix --audit-level=critical --force
+  #           npm audit fix --audit-level=critical --force
+  #           npm audit --audit-level=critical 
+
+  # scan-backtend:
+  #   docker:
+  #     - image: circleci/node:13.8.0
+  #   steps:
+  #     - checkout
+  #     - restore_cache:
+  #         keys: [backend-build]
+  #     - run:
+  #         name: Analyse frontend
+  #         command: |
+  #           cd backend
+  #           npm install
+  #           npm audit fix --audit-level=critical --force
+  #           npm audit fix --audit-level=critical --force
+  #           npm audit --audit-level=critical         
   # # scan-frontend:
   # #   docker:
   # #     # Docker image here
