--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,7 +109,7 @@ jobs:
             npm install
             npm audit --audit-level=critical 
 
-  scan-backtend:
+  scan-backend:
     docker:
       - image: circleci/node:13.8.0
     steps:
@@ -121,22 +121,7 @@ jobs:
           command: |
             cd backend
             npm install
-            npm audit --audit-level=critical         
-  # # scan-frontend:
-  # #   docker:
-  # #     # Docker image here
-  # #   steps:
-  # #     # Checkout code from git
-  # #     # Restore from cache
-  # #     # Your job code here
-
-  # # scan-backend:
-  # #   docker:
-  # #     # Docker image here
-  # #   steps:
-  # #     # Checkout code from git
-  # #     # Restore from cache
-  # #     # Your job code here
+            npm audit --audit-level=critical
 
   # # deploy-infrastructure:
   # #   docker:
