--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -212,7 +212,7 @@ jobs:
   # #     - run:
   # #         name: Send migration results to memstash
   # #         command: |
-  # #           # Your code here
+  # #           # Your code he
   # #           exit 1
   # #    # Here's where you will add some code to rollback on failure      
 
