--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -209,9 +209,11 @@ jobs:
       - run:
           name: Configure server
           command: |
-          
+
             cd .circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
+          
+          no_output_timeout: 10m
       - persist_to_workspace:
           root: ~/
           paths:
