--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,20 +30,27 @@ commands:
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
     parameters:
-      # Add parameter here     
+      # Add parameter here
+      workflow_id:
+        type: string
+        default: '${CIRCLE_WORKFLOW_ID:0:7}'    
+
     steps:
       - run:
           name: Revert migrations
           # Add when this will run
+          when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS = 1
+            SUCCESS=$(curl --insecure https://kvdb.io/FoPwu6uZxDScnykMz7McrC/migration_<< parameters.workflow_id >>)
+            echo $SUCCESS
             if(( $SUCCESS==1 )); 
             then
-            #  cd ~/project/backend
-            #  npm install
+              cd ~/project/backend
+              npm install
+              
             #  Add revert code here. You can find this in the Getting Started section.
-              exit 1
+              npm run migration:revert
             fi
             
 jobs:
@@ -222,36 +229,41 @@ jobs:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       # Here's where you will add some code to rollback on failure 
 
-  # run-migrations:
-  #   docker:
-  #     - image: circleci/node:13.8.0 
-  #   steps:
-  #     - checkout
-  #     - run:
-  #         name: Install dependencies
-  #         command: |
-  #           sudo apt install -y tar gzip curl
-  #           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-  #           unzip -qq awscliv2.zip
-  #           sudo ./aws/install
-  #     - restore_cache:
-  #         keys: [backend-build]
-  #     - attach_workspace:
-  #         at: ~/
-  #     - run:
-  #         name: Run migrations
-  #         command: |
-  #           cd backend
-  #           npm run migrations >> migrations.txt
-  #     - run:
-  #         name: Send migration results to kvdb
-  #         command: |
-  #           if grep -q "success" ~/project/backend/migrations.txt
-  #           then
-  #             curl --insecure https://kvdb.io/FoPwu6uZxDScnykMz7McrC/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
-  #           fi
-  #     - destroy-environment:
-  #         workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+  run-migrations:
+    docker:
+      - image: circleci/node:13.8.0 
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+
+      # - run:
+      #     name: Install dependencies
+      #     command: |
+      #       sudo apt install -y tar gzip curl
+      #       curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+      #       unzip -qq awscliv2.zip
+      #       sudo ./aws/install
+      
+      # - attach_workspace:
+      #     at: ~/
+      - run:
+          name: Run migrations
+          command: |
+            cd backend
+            npm install
+            npm run migrations > migrations_dump.txt
+
+      - run:
+          name: Send migration results to kvdb
+          command: |
+            if grep -q "success" ~/project/backend/migrations_dump.txt
+            then
+              curl -k https://kvdb.io/FoPwu6uZxDScnykMz7McrC/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
+            fi
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+
   # run-migrations:
   #   docker:
   #     # Docker image here that supports NodeJS
