--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -257,7 +257,7 @@ jobs:
       - run:
           name: Send migration results to kvdb
           command: |
-            if grep -q "success" ~/project/backend/migrations_dump.txt
+            if grep -q "migration successful " ~/project/backend/migrations_dump.txt
             then
               curl -k https://kvdb.io/FoPwu6uZxDScnykMz7McrC/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
             fi
