--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -237,16 +237,16 @@ jobs:
       - restore_cache:
           keys: [backend-build]
 
-      # - run:
-      #     name: Install dependencies
-      #     command: |
-      #       sudo apt install -y tar gzip curl
-      #       curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-      #       unzip -qq awscliv2.zip
-      #       sudo ./aws/install
+      - run:
+          name: Install dependencies
+          command: |
+            sudo apt install -y tar gzip curl
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip -qq awscliv2.zip
+            sudo ./aws/install
       
-      # - attach_workspace:
-      #     at: ~/
+      - attach_workspace:
+          at: ~/
       - run:
           name: Run migrations
           command: |
