--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -16,11 +16,17 @@
     - name: "wait 600 seconds for target connection to become reachable/usable."
       wait_for_connection:
 
+    # - name: "install python for Ansible."
+    #   apt:
+    #     name: python3
+    #     state: latest
+    #     update_cache: yes
+    
     - name: "install python for Ansible."
-      apt:
-        name: python3
-        state: latest
-        update_cache: yes
+      # Your code here
+      become: true
+      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
+      changed_when: false
 
 
   # Get the environment variables from CircleCI and add to the EC2 instance
@@ -38,3 +44,4 @@
 
   roles:
     # Your code here
+    - configure-server
