--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -195,10 +195,10 @@ jobs:
       # Checkout code from git
       - checkout
       # Add ssh keys with fingerprint
-      # - run: 
-      #     name: Add SSH
-      #     command: |
-      #       apk add --update openssh-client git
+      - run: 
+          name: Add SSH
+          command: |
+            apk add --update openssh-client git
       
       - add_ssh_keys:
           fingerprints: ["76:9e:73:d0:89:bd:3b:b3:dd:5c:99:17:6f:17:2b:13"] 
@@ -231,7 +231,7 @@ jobs:
 
   run-migrations:
     docker:
-      - image: circleci/node:13.8.0 
+      - image: circleci/node:16.10.0 
     steps:
       - checkout
       - restore_cache:
