--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -21,7 +21,7 @@
     #     name: python3
     #     state: latest
     #     update_cache: yes
-    
+
     - name: "install python for Ansible."
       # Your code here
       become: true
@@ -31,6 +31,8 @@
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
+    - NODE_ENV: production
+    - ENVIRONMENT: production
     - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"  
     # Add more env vars here
     - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
