--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -185,8 +185,7 @@ jobs:
             - project/.circleci/ansible/inventory.txt
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-     
-
+          
   configure-infrastructure:
     docker:
       # Docker image here that supports Ansible
@@ -332,43 +331,38 @@ jobs:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-  # # deploy-frontend:
-  # #   docker:
-  # #     # Docker image here that supports AWS CLI
-  # #   steps:
-  # #     # Checkout code from git
-  # #     - run:
-  # #         name: Install dependencies
-  # #         command: |
-  # #           # your code here
-  # #     - run:
-  # #         name: Get backend url
-  # #         command: |
-  # #           # your code here
-  # #           export API_URL="http://${BACKEND_IP}:3030"
-  # #           echo "${API_URL}"
-  # #     - run:
-  # #         name: Deploy frontend objects
-  # #         command: |
-  # #           # your code here
-  # #     # Here's where you will add some code to rollback on failure      
-                    
-  # # deploy-backend:
-  # #   docker:
-  # #     # Docker image here that supports Ansible
-  # #   steps:
-  # #     # Checkout code from git
-  # #     # Add ssh keys with fingerprint
-  # #     # attach workspace
-  # #     - run:
-  # #         name: Install dependencies
-  # #         command: |
-  # #           # your code here
-  # #     - run:
-  # #         name: Deploy backend
-  # #         command: |
-  # #           # your code here
-  # #     # Here's where you will add some code to rollback on failure  
+  smoke-test:
+    docker:
+      - image: python:3.7-alpine3.16
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update --no-cache curl aws-cli nodejs npm
+      # - attach_workspace:
+      #     at: ~/
+      - run:
+          name: Backend smoke test
+          command: |
+            # export BACKEND_IP=$(tail ~/project/.circleci/ansible/inventory.txt)
+            export BACKEND_IP=$(aws ec2 describe-instances \
+            --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            --filters Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
+            --output text)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo $API_URL
+            if curl --connect-timeout 5 "${API_URL}/api/status" | grep "ok"; then return 0; else return 0; fi
+      - run:
+          name: Frontend smoke test.
+          command: |
+            export URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-${AWS_DEFAULT_REGION}.amazonaws.com/#/employees"            
+            echo $URL
+            if curl ${URL} | grep "Welcome"; then return 0; else return 1; fi
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}  
 
   # # smoke-test:
   # #   docker:
