--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -352,9 +352,9 @@ jobs:
             --filters Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
             --output text)
             export API_URL="http://${BACKEND_IP}:3030"
-            echo $API_URL
-            if 
-              curl --connect-timeout 5 "${API_URL}/api/status" | grep "ok"; 
+            echo "${API_URL}"
+            if curl  "${API_URL}/api/status" ;  
+              # curl --connect-timeout 5 "${API_URL}/api/status" | grep "ok"; 
             then 
               return 0; 
             else 
@@ -377,32 +377,9 @@ jobs:
       - revert-migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}  
 
-  # # smoke-test:
-  # #   docker:
-  # #     # Lightweight Docker image 
-  # #   steps:
-  # #     # Checkout code from git
-  # #     - run:
-  # #         name: Install dependencies
-  # #         command: |
-  # #           # your code here
-  # #     - run:
-  # #         name: Get backend url
-  # #         command: |
-  # #           # your code here
-  # #     - run:
-  # #         name: Backend smoke test.
-  # #         command: |
-  # #           # your code here
-  # #     - run:
-  # #         name: Frontend smoke test.
-  # #         command: |
-  # #           # your code here
-  # #     # Here's where you will add some code to rollback on failure  
-
-  # # cloudfront-update:
+  # smoke-test:
   #   docker:
-  #     # Docker image here that supports AWS CLI
+  #     # Lightweight Docker image 
   #   steps:
   #     # Checkout code from git
   #     - run:
@@ -410,10 +387,72 @@ jobs:
   #         command: |
   #           # your code here
   #     - run:
-  #         name: Update cloudfront distribution
+  #         name: Get backend url
   #         command: |
   #           # your code here
-  #     # Here's where you will add some code to rollback on failure  
+  #             # Fetch and prepare the BACKEND_IP env var
+  #           export API_URL="http://${BACKEND_IP}:3030"
+  #           echo "${API_URL}"
+  #           if curl "${API_URL}/api/status" | grep "ok"
+  #           then
+  #               return 0
+  #           else
+  #               return 1
+  #           fi
+  #     - run:
+  #         name: Backend smoke test.
+  #         command: |
+  #           # your code here
+  #     - run:
+  #         name: Frontend smoke test.
+  #         command: |
+  #           # your code here
+  #           URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+  #           echo ${URL} 
+  #           if curl -s ${URL} | grep "Welcome"
+  #           then
+  #               # Change this to 0 after the job fails
+  #             return 1
+  #           else
+  #             return 1
+  #           fi
+  # #     # Here's where you will add some code to rollback on failure  
+
+  cloudfront-update:
+    docker:
+      # Docker image here that supports AWS CLI
+      - image: amazon/aws-cli
+    steps:
+      # Checkout code from git
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            # your code here
+            yum install -y npm nodejs
+            sudo apt install -y tar gzip curl
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip -qq awscliv2.zip
+            sudo ./aws/install
+      - run:
+          name: Update cloudfront distribution
+          command: |
+            # your code here
+            export OldWorkflowID=$(aws cloudformation list-exports \
+            --query "Exports[?Name==\`WorkflowID\`].Value" \
+            --no-paginate --output text)
+            aws cloudformation deploy \
+            --template-file .circleci/files/cloudfront.yml \
+            --stack-name InitialStack \
+            --parameter-overrides WorkflowID=${CIRCLE_WORKFLOW_ID:0:7} \
+            --tags project=udapeople
+
+      # Here's where you will add some code to rollback on failure
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+
 
 # cleanup:
 #     docker:
@@ -467,3 +506,6 @@ workflows:
       #     requires: [smoke-test]
       # - cleanup:
       #     requires: [cloudfront-update]
+
+
+        
