--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -230,38 +230,68 @@ jobs:
 
   run-migrations:
     docker:
-      - image: circleci/node:16.10.0 
+      - image: circleci/node:13.8.0 # safest to use to avoid migration errors
     steps:
       - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            sudo apt install -y tar gzip curl
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip -qq awscliv2.zip
+            sudo ./aws/install
       - restore_cache:
           keys: [backend-build]
-
-      # - run:
-      #     name: Install dependencies
-      #     command: |
-      #       sudo apt install -y tar gzip curl
-      #       curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-      #       unzip -qq awscliv2.zip
-      #       sudo ./aws/install
-      
-      # - attach_workspace:
-      #     at: ~/
+      - attach_workspace:
+          at: ~/
       - run:
           name: Run migrations
           command: |
             cd backend
-            npm install
-            npm run migrations > migrations_dump.txt
-
+            npm run migrations >> migrations.txt
       - run:
           name: Send migration results to kvdb
           command: |
-            if grep -q "migration successful " ~/project/backend/migrations_dump.txt
+            if grep -q "success" ~/project/backend/migrations.txt
             then
-              curl -k https://kvdb.io/FoPwu6uZxDScnykMz7McrC/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
+              curl --insecure https://kvdb.io/ViWzkdySLpmD9TMMzU5Fzq/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
             fi
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+    # docker:
+    #   - image: circleci/node:16.10.0 
+    # steps:
+    #   - checkout
+    #   - restore_cache:
+    #       keys: [backend-build]
+
+    #   # - run:
+    #   #     name: Install dependencies
+    #   #     command: |
+    #   #       sudo apt install -y tar gzip curl
+    #   #       curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+    #   #       unzip -qq awscliv2.zip
+    #   #       sudo ./aws/install
+      
+    #   # - attach_workspace:
+    #   #     at: ~/
+    #   - run:
+    #       name: Run migrations
+    #       command: |
+    #         # cd backend
+    #         # npm install
+    #         # npm run migrations > migrations_dump.txt
+            
+
+    #   - run:
+    #       name: Send migration results to kvdb
+    #       command: |
+    #         if grep -q "migration successful " ~/project/backend/migrations_dump.txt
+    #         then
+    #           curl -k https://kvdb.io/FoPwu6uZxDScnykMz7McrC/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
+    #         fi
+    #   - destroy-environment:
+    #       workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   deploy-frontend:
       docker:
