--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,35 +1,58 @@
----
-- name: 'update and upgrade packages.'
-  become: yes
-  apt:
-    upgrade: yes
-    update_cache: yes
-    cache_valid_time: 86400
-- name: remove unneeded deps
-  become: yes
-  apt:
-    autoremove: yes
-- name: install deps
-  become: yes
-  apt:
-    name: ['nodejs', 'npm']
-    state: latest
-    update_cache: yes
-- name: install pm2
-  become: yes
-  npm:
-    name: pm2
-    global: yes
-    state: latest
-    production: yes
-- name: extract artifact
-  become: yes
-  unarchive:
-    src: files/artifact.tar.gz
-    dest: .
+# ---
+# - name: 'update and upgrade packages.'
+#   become: yes
+#   apt:
+#     upgrade: yes
+#     update_cache: yes
+#     cache_valid_time: 86400
+# - name: remove unneeded deps
+#   become: yes
+#   apt:
+#     autoremove: yes
+# - name: install deps
+#   become: yes
+#   apt:
+#     name: ['nodejs', 'npm']
+#     state: latest
+#     update_cache: yes
+# - name: install pm2
+#   become: yes
+#   npm:
+#     name: pm2
+#     global: yes
+#     state: latest
+#     production: yes
+# - name: extract artifact
+#   become: yes
+#   unarchive:
+#     src: files/artifact.tar.gz
+#     dest: .
 
-- name: start app
-  become: yes
+# - name: start app
+#   become: yes
+#   shell: |
+#     pm2 delete all
+#     pm2 start npm -- start
+
+
+---
+- name: Create directiory
+  file:
+    path: ~/backend
+    state: directory
+
+- name: Extract files into the EC2 instance
+  unarchive:
+    src: artifact.tar.gz
+    dest: ~/backend
+
+- name: Start the app
+  become: true
   shell: |
-    pm2 delete all
+    cd backend
+    npm install
+- name: Start pm2
+  become: true
+  shell: |
+    cd backend
     pm2 start npm -- start
