--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,9 +144,9 @@ jobs:
           command: |
             cd backend
             npm install
-            npm fund
-            npm audit fix --audit-level=critical --force
-            npm audit fix --audit-level=critical --force
+            # npm fund
+            # npm audit fix --audit-level=critical --force
+            # npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
       - slack/notify:
           event: fail
