--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -132,24 +132,43 @@ jobs:
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical 
 
+
   scan-backend:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - checkout
-      - restore_cache:
-          keys: [backend-build]
-      - run:
-          name: Analyse backend
-          command: |
-            cd backend
-            npm install
-            npm audit fix --audit-level=critical --force
-            npm audit fix --audit-level=critical --force
-            npm audit --audit-level=critical
-      - slack/notify:
-          event: fail
-          template: basic_fail_1
+  docker:
+    - image: circleci/node:13.8.0
+  steps:
+    - checkout
+    - restore_cache:
+        keys: [backend-build]
+    - run:
+        name: Analyse backend
+        command: |
+          cd frontend
+          npm install
+          npm audit fix --audit-level=critical --force
+          npm audit fix --audit-level=critical --force
+          npm audit --audit-level=critical
+    - slack/notify:
+        event: fail
+        template: basic_fail_1
+  # scan-backend:
+  #   docker:
+  #     - image: circleci/node:13.8.0
+  #   steps:
+  #     - checkout
+  #     - restore_cache:
+  #         keys: [backend-build]
+  #     - run:
+  #         name: Analyse backend
+  #         command: |
+  #           cd backend
+  #           npm install
+  #           npm audit fix --audit-level=critical --force
+  #           npm audit fix --audit-level=critical --force
+  #           npm audit --audit-level=critical
+  #     - slack/notify:
+  #         event: fail
+  #         template: basic_fail_1
   deploy-infrastructure:
     docker:
       - image: amazon/aws-cli
