--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,24 +151,7 @@ jobs:
       - slack/notify:
           event: fail
           template: basic_fail_1
-  # scan-backend:
-  #   docker:
-  #     - image: circleci/node:13.8.0
-  #   steps:
-  #     - checkout
-  #     - restore_cache:
-  #         keys: [backend-build]
-  #     - run:
-  #         name: Analyse backend
-  #         command: |
-  #           cd backend
-  #           npm install
-  #           npm audit fix --audit-level=critical --force
-  #           npm audit fix --audit-level=critical --force
-  #           npm audit --audit-level=critical
-  #     - slack/notify:
-  #         event: fail
-  #         template: basic_fail_1
+  
   deploy-infrastructure:
     docker:
       - image: amazon/aws-cli
@@ -213,10 +196,10 @@ jobs:
       # Checkout code from git
       - checkout
       # Add ssh keys with fingerprint
-      - run: 
-          name: Add SSH
-          command: |
-            apk add --update openssh-client git
+      # - run: 
+      #     name: Add SSH
+      #     command: |
+      #       apk add --update openssh-client git
       
       - add_ssh_keys:
           fingerprints: ["76:9e:73:d0:89:bd:3b:b3:dd:5c:99:17:6f:17:2b:13"] 
@@ -234,7 +217,17 @@ jobs:
       - run:
           name: Configure server
           command: |
-
+            echo ENVIRONMENT=production > backend/.env
+            echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> backend/.env
+            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> backend/.env
+            echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> backend/.env
+            echo TYPEORM_HOST=$TYPEORM_HOST >> backend/.env
+            echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> backend/.env
+            echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> backend/.env
+            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> backend/.env
+            echo TYPEORM_PORT=$TYPEORM_PORT >> backend/.env
+            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> backend/.env
+            cat backend/.env
             cd .circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
           
