--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -253,6 +253,7 @@ jobs:
           name: Run migrations
           command: |
             cd backend
+            sudo npm install -g npm
             npm run migrations >> migrations_dump.txt
       - run:
           name: Send migration results to kvdb
