--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,7 @@ jobs:
 
   build-backend:
     docker:
-      - image: circleci/node:16.10.0
+      - image: cimg/node:18.7.0
     steps:
       - checkout
       - restore_cache:
